# elfplusplus

./: CMakeLists.txt  LICENSE  README.md  elfpp.db
examples/: CMakeLists.txt  elf_feature_extractor.cpp  elf_walk.cpp  elfdump.cpp  elfmonitor.cpp  visualize_elfs.py
include/: autoencoder.h  bit_vector_attribute.h  cpu_matrix.h  deep_helmholtz_gan.h  disassembler.h  elfplusplus.h  fast_matrix_forest.h  info_helper.h  lstm.h  matrix.h  optimizers.h  platform_helper.h  sampling_helper.h  utils.h  web_dispatcher.h
scripts/: README.md  deb_iterator.py  dpkg_enumerator.py  draw_package_categorization_scores.py  elf_walker.py  package_analyzer.py  symbolic_categorize_packages.py  symbolic_parser.py
scripts/clean/elfwalk/: analyze_symbols.py  dpkg_enumerator.py  elf_walker.py
scripts/clean/test/elfwalk/: draw_processed_symbols.py
scripts/lib64/: draw_processed_symbols.py
src/: elfplusplus.cpp  platform_helper.cpp
tests/: sketch.py
